--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/mdontula/NodeAppInitial",
   "dependencies": {
-    "mongodb": "^2.0.33"
+    "mongodb": ">=3.1.13"
   }
 }
